--- a/config.json
+++ b/config.json
@@ -1,8 +1,1 @@
-{
-  "ip": "60.205.45.8",
-  "user": "bxu2713370167",
-  "password": "753951anna",
-  "workDir": "/myfolder/gameBackup/",
-  "backUp": "C:\\Users\\wensimin\\Documents\\Avalanche Studios\\theHunter Call of the Wild",
-  "interval" : "60"
-}
+{"ip": "60.205.45.8", "user": "bxu2713370167", "password": "753951anna", "path": "/myfolder/test", "localPath": "C:\\Users\\wensimin\\Documents\\Avalanche Studios\\theHunter Call of the Wild", "interval": "60"}
