修正下载路径错误问题                   增加端口设置                   增加中文支持,详情readme.md

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip": "60.205.45.8", "user": "bxu2713370167", "password": "753951anna", "path": "/myfolder/gameBackup", "localPath": "C:\\Users\\wensimin\\Documents\\Avalanche Studios\\theHunter Call of the Wild", "interval": "60"}
+{"ip": "192.168.0.100", "user": "admin", "password": "admin", "port": 28456, "path": "/storage/emulated/0/game/Riddle Joker/kirikiroid\u9ad8\u538b\u7248/savedata", "localPath": "D:\\Games\\RJ\\RIDDLE JOKER\\savedata", "interval": "60"}
